Fix pie chart flickering
Fixed an issue where mouseover on pie chart tooltips would cause them to flicker on/off.

--- a/styles.css
+++ b/styles.css
@@ -470,6 +470,16 @@ label.radiobox-label:nth-of-type(2) {
   box-shadow: 2px 2px 5px #dddddd;
 }
 
+div.google-visualization-tooltip {
+  pointer-events: none;
+}
+
+svg > g:last-child > g:last-child {
+  pointer-events: none;
+}
+
+
+
 footer a {
   color: black;
 }
